
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;



u_short checksum(u_short * data,u_short length)
{
 register long value;
 u_short i;

 for(i = 0; i< (length >> 1); i++)
  value += data[i];

 if((length & 1)==1)
  value += (data[i] << 8);

 value = (value & 0xFFFF) + (value >> 16);

 return(~value);
}
